objects/Calculator_Result__c/Calculator_Result__c.object-meta.xml
<CustomObject>
    <description>Enregistrement pour stocker les opérandes et le résultat d&apos;un calcul (ex: appel Calculator).</description>
    <label>Calculator Result</label>
    <nameField>
        <displayFormat>Calc-{0000}</displayFormat>
        <label>Calculator Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculator Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>