objects/Calculator_Result__c/fields/Operand_A__c.field-meta.xml
<CustomField>
    <fullName>Operand_A__c</fullName>
    <label>Operand A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>