objects/Calculator_Result__c/fields/Operand_B__c.field-meta.xml
<CustomField>
    <fullName>Operand_B__c</fullName>
    <label>Operand B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>