objects/Calculator_Result__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Résultat du calcul (ex: A + B), rempli par CalculatorCalloutTask.</description>
    <label>Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>